<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.erick.quizgame.Topic"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0">

            <Button
                android:id="@+id/btn_t1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/t1"
                android:layout_weight="1.0"
                android:background="@color/Theme1"/>

            <Button
                android:id="@+id/btn_t2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/t2"
                android:layout_weight="1.0"
                android:background="@color/Theme2"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0">
        <Button
            android:id="@+id/btn_t3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/t3"
            android:layout_weight="1.0"
            android:background="@color/Theme3"/>

        <Button
            android:id="@+id/btn_t4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/t4"
            android:layout_weight="1.0"
            android:background="@color/Theme4"/>

    </LinearLayout>

</LinearLayout>
